# dexforge

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/dexplay/: __init__.py
src/dexplay/envs/: __init__.py
src/dexplay/envs/robots/: __init__.py  common_robot_cfg.py
src/dexplay/envs/robots/allegro/: __init__.py  robot_cfg.py
src/dexplay/envs/robots/allegro/model/: README.md  allegro_phase0.xml
src/dexplay/envs/robots/xhand/: __init__.py  robot_cfg.py
src/dexplay/envs/robots/xhand/model/: README.md  xhand_phase0.xml
src/dexplay/envs/tasks/allegro_xhand_reorient/: __init__.py  config.py  mdp.py  task.py
src/dexplay/envs/tasks/allegro_xhand_reorient/model/: README.md  cube.xml
src/dexplay/rl/: __init__.py  diagnostics.py  eval.py  ppo_config.py  train_ppo.py
src/dexplay/specs/: phase0_env_interface.md
src/dexplay/utils/: __init__.py  logging.py  paths.py  seeding.py
